ProdIND/ProdPrograms/force-app/main/default/objects/KCC_And_Other_Loan_Information__c/KCC_And_Other_Loan_Information__c.object-meta.xml
<CustomObject>
    <label>KCC And Other Loan Information</label>
    <nameField>
        <displayFormat>KCC-{0000}</displayFormat>
        <label>KCC And Other Loan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KCC And Other Loan Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>