ProdIND/ProdPrograms/force-app/main/default/objects/KCC_And_Other_Loan_Information__c/fields/BANK_NAME__c.field-meta.xml
<CustomField>
    <fullName>BANK_NAME__c</fullName>
    <label>BANK NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>