ProdIND/ProdPrograms/force-app/main/default/objects/KCC_And_Other_Loan_Information__c/fields/EMI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EMI_Amount__c</fullName>
    <label>EMI Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>