ProdIND/ProdPrograms/force-app/main/default/objects/KCC_And_Other_Loan_Information__c/fields/Loan_number__c.field-meta.xml
<CustomField>
    <fullName>Loan_number__c</fullName>
    <label>Loan number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>