ProdIND/ProdPrograms/force-app/main/default/objects/KCC_And_Other_Loan_Information__c/fields/Loan_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Loan_Stakeholders__c</fullName>
    <label>Loan Stakeholders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>