ProdIND/ProdPrograms/force-app/main/default/objects/KCC_And_Other_Loan_Information__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KCC</fullName>
            </value>
            <value>
                <fullName>HL</fullName>
            </value>
            <value>
                <fullName>CAR</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>TW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>