ProdIND/ProdPrograms/force-app/main/default/objects/KCC_And_Other_Loan_Information__c/fields/Model_Details__c.field-meta.xml
<CustomField>
    <fullName>Model_Details__c</fullName>
    <label>Model Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>