ProdIND/ProdPrograms/force-app/main/default/objects/KCC_And_Other_Loan_Information__c/fields/Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Sr_No__c</fullName>
    <label>Sr. No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>