ProdIND/ProdPrograms/force-app/main/default/objects/KCC_And_Other_Loan_Information__c/fields/Total_KCC_Loan_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Total_KCC_Loan_Stakeholders__c</fullName>
    <label>Total KCC Loan - Stakeholders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>